--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.0.0",
     "mongoose": "^7.5.0",
-    "socketio": "^1.0.0",
+    "socket.io": "^4.7.2",
     "uuid": "^9.0.0"
   }
 }
