--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@netlify/functions": "^2.0.2",
+    "@types/express": "^4.17.17",
     "aws-sdk": "^2.1450.0",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
@@ -28,6 +30,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.0.0",
     "mongoose": "^7.5.0",
+    "serverless-http": "^3.2.0",
     "socket.io": "^4.7.2",
     "uuid": "^9.0.0"
   }
