change structure for netlify deployment

--- a/package.json
+++ b/package.json
@@ -10,15 +10,16 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
-    "dev": "nodemon server"
+    "start": "node functions/api.js",
+    "build": "netlify deploy --prod",
+    "dev": "nodemon functions/api.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "aws-sdk": "^2.1450.0",
-    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "date-fns": "^2.30.0",
@@ -28,6 +29,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.0.0",
     "mongoose": "^7.5.0",
+    "netlify-lambda": "^2.0.16",
     "serverless-http": "^3.2.0",
     "socket.io": "^4.7.2",
     "uuid": "^9.0.0"
